added comments and tidied up components

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
     --background: 195 83% 19%;
   }
   * {
-    @apply border-accent text-accent-light !scroll-smooth;
+    @apply border-accent text-accent-light !scroll-smooth focus:outline-none;
   }
   body {
     @apply bg-background;
