--- a/app/globals.css
+++ b/app/globals.css
@@ -33,4 +33,12 @@
     @apply scroll-mt-14;
     /* Matches the height of the navbar */
   }
+
+  .article-content > ul {
+    @apply space-y-2;
+  }
+
+  .article-content ul {
+    @apply list-disc pl-6;
+  }
 }
