hiding scrollbar css, added to navbar, made navbar scrollable on x axis

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,4 +37,15 @@
   .article-content ul {
     @apply list-disc pl-6;
   }
+
+  .no-scrollbar {
+    overflow: auto;
+    /* For Firefox */
+    scrollbar-width: none;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    /* For Chrome, Safari, and Edge */
+    display: none;
+  }
 }
